# web-alt-mem-pool-bundler

./: README.md  fluence.yaml
docker/: Config1.toml  Config2.toml  Config3.toml  clean.sh  cluster.json  fluence-minimal.dockerfile  ipfs.sh  single.json
fluence/: .gitignore  fluence.yaml  package-lock.json  package.json  pnpm-lock.yaml
fluence/.fluence/: workers.yaml
fluence/.fluence/aqua/: hosts.aqua  services.aqua
fluence/_aqua/: main.ts  test.ts
fluence/src/aqua/: main.aqua  test.aqua  test.ts
fluence/src/services/myService/modules/myService/: Cargo.toml
fluence/src/services/myService/modules/myService/src/: main.rs  talis.json
fluence/ts/: package.json  tsconfig.json
fluence/ts/src/: index.ts
fluence/ts/src/aqua/: KeyMaker.ts  main.ts
web-bundler/ts/: main.ts  package.json  tsconfig.json
web-bundler/ts/src/: index.ts
web-bundler/ts/src/aqua/: main.ts
web-client/client/: package.json  pnpm-lock.yaml  tsconfig.json
web-client/client/src/: App.css  App.tsx  main.ts
