[package]
name = "myService"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "myService"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.10.0"
fluence-keypair = "0.10.3"
bs58 = "0.5.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
marine-rs-sdk-test = "0.10.0"
